k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: receive-forms
  labels:
    app.kubernetes.io/name: receive-forms
    app.kubernetes.io/part-of: receive-forms
